--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -4678,7 +4678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db898a44",
+   "id": "0b919c8d",
    "metadata": {},
    "source": [
     "# Function\n",
@@ -4844,10 +4844,304 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63b0065b",
+   "id": "0e5c81ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# oop : object Oriented Programm\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1f6b8f2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Human:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        \n",
+    "    def greet(self):\n",
+    "        print(f\"my name is {self.name} i am {self.age} years old, i here by welcome you all\")\n",
+    "        \n",
+    "    def nation(self):\n",
+    "        print(\"i am from Nigeria\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "10ccbaf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create first object from the class\n",
+    "first_person = Human('olaitan', 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "077ea11c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is olaitan i am 12 years old, i here by welcome you all\n"
+     ]
+    }
+   ],
+   "source": [
+    "# first_person greet person\n",
+    "first_person.greet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dfc21bc",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "fc6fdad7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    def __init__(self, maker, model, year):\n",
+    "        self.maker = maker\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "        self.engine = False # off mode\n",
+    "        self.speed = 0\n",
+    "        \n",
+    "    def start_engine(self):\n",
+    "        if self.engine== False:\n",
+    "            print(f\"the {self.maker} {self.model} {self.year} engine started!!!\")\n",
+    "            self.engine= True            \n",
+    "        else:\n",
+    "            print(f\"the {self.maker} {self.model} {self.year} engine already start mode\")\n",
+    "            \n",
+    "            \n",
+    "    def off_engine(self):\n",
+    "        if self.engine==True:\n",
+    "            print(f\"the {self.maker} {self.model} {self.year} engine is off!!!\")\n",
+    "            self.engine= False         \n",
+    "        else:\n",
+    "            print(f\"the {self.maker} {self.model} {self.year} engine is already on off mode\")\n",
+    "            \n",
+    "    def accelerate(self, speed):\n",
+    "        if self.engine==True:\n",
+    "            self.speed+=speed\n",
+    "            print(f\"{self.maker} {self.model} {self.year} accelerated to {self.speed} km/h\")\n",
+    "            if self.speed> 80:\n",
+    "                print(\"You may need to slow down abit\")\n",
+    "        else:\n",
+    "            print(\"please start the engine first!!!\")\n",
+    "            \n",
+    "    def brake(self, brake):\n",
+    "        if self.speed>0:\n",
+    "            self.speed-=brake\n",
+    "            print(f\"the {self.maker} {self.model} {self.year} decelerated to {self.speed}\")\n",
+    "            \n",
+    "    def current_speed(self):\n",
+    "        print(f\"the current speed of {self.maker} {self.model} {self.year} {self.speed} km/h\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "7e60b3ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_car = Car(\"Toyoto\", \"camry\", \"2012\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "214ffdd1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "e8e22e75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the Toyoto camry 2012 engine started!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_car.start_engine()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cf43c04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "444105e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the current speed of Toyoto camry 2012 0 km/h\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_car.current_speed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c5e7e61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "ec7e710c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toyoto camry 2012 accelerated to 20 km/h\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_car.accelerate(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "49afe56b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the current speed of Toyoto camry 2012 18 km/h\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_car.current_speed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "efafbb3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the Toyoto camry 2012 decelerated to 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_car.brake(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b4bec53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "36b48181",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the Toyoto camry 2012 engine started!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_car.start_engine()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea2f95d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1fdd5cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cc7fe0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63b0065b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def min_to_sec(min_):\n",
+    "    sec = min_ * 60\n",
+    "    return sec"
+   ]
   },
   {
    "cell_type": "code",
