--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -5199,6 +5199,115 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3d8aff90",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50de2976",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "97407d5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# start by importing the numpy\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d6a97efa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create array from a list\n",
+    "lis1 = [2,3,4,6,7]\n",
+    "arr1 = np.array(lis1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ed401e4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(lis1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4adb0b65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(arr1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "02e4eb39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 3 4 6 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b15e33f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "88f84279",
    "metadata": {},
    "outputs": [],
