--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "552c507e",
+   "id": "be739fc4",
    "metadata": {},
    "source": [
     "# Supervised Machine Learning\n",
@@ -1508,13 +1508,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "f3ea5f4c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split "
    ]
   },
   {
@@ -1635,7 +1636,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "57482ae9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c33c51c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92bdf9b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f76e9d29",
+   "metadata": {},
+   "source": [
+    "# Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "242d8b47",
    "metadata": {},
    "outputs": [
@@ -1721,7 +1754,7 @@
        "4  15804002    Male   19            76000          0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1732,9 +1765,499 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f84b1245",
+   "metadata": {},
+   "source": [
+    "# Step one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c27cde2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# seperat the feature from the target\n",
+    "X = Social_Network_Ads.drop(columns=[\"User ID\"])  # features\n",
+    "y = X.pop(\"Purchased\") # target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "39190497",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>35</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>26</td>\n",
+       "      <td>43000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>27</td>\n",
+       "      <td>57000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>19</td>\n",
+       "      <td>76000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>46</td>\n",
+       "      <td>41000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>51</td>\n",
+       "      <td>23000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>50</td>\n",
+       "      <td>20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>36</td>\n",
+       "      <td>33000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>399</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>49</td>\n",
+       "      <td>36000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>400 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Gender  Age  EstimatedSalary\n",
+       "0      Male   19            19000\n",
+       "1      Male   35            20000\n",
+       "2    Female   26            43000\n",
+       "3    Female   27            57000\n",
+       "4      Male   19            76000\n",
+       "..      ...  ...              ...\n",
+       "395  Female   46            41000\n",
+       "396    Male   51            23000\n",
+       "397  Female   50            20000\n",
+       "398    Male   36            33000\n",
+       "399  Female   49            36000\n",
+       "\n",
+       "[400 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dd9a04f",
+   "metadata": {},
+   "source": [
+    "# Step Two (if necessary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7e9fbeb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transformation\n",
+    "# transforming the gender column\n",
+    "X=pd.get_dummies(X, columns=[\"Gender\" ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0915bc6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Gender_Female</th>\n",
+       "      <th>Gender_Male</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19</td>\n",
+       "      <td>19000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>35</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26</td>\n",
+       "      <td>43000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>27</td>\n",
+       "      <td>57000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19</td>\n",
+       "      <td>76000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>46</td>\n",
+       "      <td>41000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396</th>\n",
+       "      <td>51</td>\n",
+       "      <td>23000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397</th>\n",
+       "      <td>50</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>36</td>\n",
+       "      <td>33000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>399</th>\n",
+       "      <td>49</td>\n",
+       "      <td>36000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>400 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Age  EstimatedSalary  Gender_Female  Gender_Male\n",
+       "0     19            19000              0            1\n",
+       "1     35            20000              0            1\n",
+       "2     26            43000              1            0\n",
+       "3     27            57000              1            0\n",
+       "4     19            76000              0            1\n",
+       "..   ...              ...            ...          ...\n",
+       "395   46            41000              1            0\n",
+       "396   51            23000              0            1\n",
+       "397   50            20000              1            0\n",
+       "398   36            33000              0            1\n",
+       "399   49            36000              1            0\n",
+       "\n",
+       "[400 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c27cde2c",
+   "id": "269b22b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ff34784",
+   "metadata": {},
+   "source": [
+    "# Step three"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "18d1210c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split the data into train and validation\n",
+    "x_train, x_val, y_train, y_val = train_test_split(X, y, test_size=0.1, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a17376b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f7e90e3",
+   "metadata": {},
+   "source": [
+    " # Step Four"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "53cf87c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build the model\n",
+    "from sklearn.tree import DecisionTreeClassifier # import algorithm\n",
+    "dt = DecisionTreeClassifier()  # create the instance of the algorithm\n",
+    "model1 = dt.fit(x_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2cf0779f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build model two\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "lr = LogisticRegression()\n",
+    "model2 = lr.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "115a0f61",
+   "metadata": {},
+   "source": [
+    "# Step Five"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f8511b27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction1=model1.predict(x_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "e99b7e9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.85"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "accuracy_score(y_val, prediction1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "d2a92a03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[24,  3],\n",
+       "       [ 3, 10]], dtype=int64)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_val, prediction1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "387f6b06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(40, 4)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_val.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "4c900b10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    27\n",
+       "1    13\n",
+       "Name: Purchased, dtype: int64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_val.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d209d98",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1742,7 +2265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0b4356d",
+   "id": "68bffac1",
    "metadata": {},
    "outputs": [],
    "source": []
