--- a/main.ipynb
+++ b/main.ipynb
@@ -2,6 +2,338 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "eb384353",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "path = \"C:/Users/pc/Documents/Lasop/PowerBI/Data/data/\"\n",
+    "df = pd.read_excel(path + \"PBI.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "26b74687",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product24\n",
+      "Product22\n",
+      "Product38\n",
+      "Product33\n",
+      "Product15\n",
+      "Product10\n",
+      "Product13\n",
+      "Product15\n",
+      "Product14\n",
+      "Product43\n",
+      "Product38\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in df.PRODUCT[:11]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b01e8bda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f=df.PRODUCT.value_counts().index.sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6cf74724",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product10\n",
+      "Product04\n",
+      "Product07\n",
+      "Product03\n",
+      "Product02\n",
+      "Product07\n",
+      "Product08\n",
+      "Product04\n",
+      "Product03\n",
+      "Product01\n",
+      "Product02\n",
+      "Product08\n",
+      "Product01\n",
+      "Product06\n",
+      "Product10\n",
+      "Product05\n",
+      "Product04\n",
+      "Product04\n",
+      "Product03\n",
+      "Product05\n",
+      "Product10\n",
+      "Product03\n",
+      "Product05\n",
+      "Product09\n",
+      "Product02\n",
+      "Product04\n",
+      "Product05\n",
+      "Product08\n",
+      "Product10\n",
+      "Product08\n",
+      "Product03\n",
+      "Product05\n",
+      "Product02\n",
+      "Product05\n",
+      "Product02\n",
+      "Product09\n",
+      "Product05\n",
+      "Product02\n",
+      "Product01\n",
+      "Product04\n",
+      "Product04\n",
+      "Product03\n",
+      "Product04\n",
+      "Product02\n",
+      "Product06\n",
+      "Product06\n",
+      "Product02\n",
+      "Product01\n",
+      "Product02\n",
+      "Product01\n",
+      "Product06\n",
+      "Product10\n",
+      "Product01\n",
+      "Product07\n",
+      "Product01\n",
+      "Product05\n",
+      "Product02\n",
+      "Product02\n",
+      "Product09\n",
+      "Product01\n",
+      "Product08\n",
+      "Product02\n",
+      "Product05\n",
+      "Product09\n",
+      "Product04\n",
+      "Product09\n",
+      "Product03\n",
+      "Product04\n",
+      "Product09\n",
+      "Product09\n",
+      "Product08\n",
+      "Product09\n",
+      "Product10\n",
+      "Product08\n",
+      "Product10\n",
+      "Product06\n",
+      "Product06\n",
+      "Product02\n",
+      "Product06\n",
+      "Product10\n",
+      "Product04\n",
+      "Product08\n",
+      "Product05\n",
+      "Product04\n",
+      "Product08\n",
+      "Product03\n",
+      "Product09\n",
+      "Product01\n",
+      "Product04\n",
+      "Product01\n",
+      "Product05\n",
+      "Product01\n",
+      "Product02\n",
+      "Product01\n",
+      "Product08\n",
+      "Product04\n",
+      "Product09\n",
+      "Product05\n",
+      "Product05\n",
+      "Product10\n",
+      "Product03\n",
+      "Product07\n",
+      "Product02\n",
+      "Product04\n",
+      "Product06\n",
+      "Product10\n",
+      "Product09\n",
+      "Product04\n",
+      "Product01\n",
+      "Product10\n",
+      "Product06\n",
+      "Product09\n",
+      "Product03\n",
+      "Product03\n",
+      "Product06\n",
+      "Product01\n",
+      "Product05\n",
+      "Product06\n",
+      "Product09\n",
+      "Product03\n",
+      "Product10\n",
+      "Product07\n",
+      "Product05\n",
+      "Product05\n",
+      "Product09\n",
+      "Product10\n",
+      "Product05\n",
+      "Product06\n",
+      "Product01\n",
+      "Product03\n",
+      "Product01\n",
+      "Product02\n",
+      "Product07\n",
+      "Product05\n",
+      "Product03\n",
+      "Product01\n",
+      "Product01\n",
+      "Product10\n",
+      "Product01\n",
+      "Product02\n",
+      "Product04\n",
+      "Product02\n",
+      "Product03\n",
+      "Product05\n",
+      "Product06\n",
+      "Product02\n",
+      "Product07\n",
+      "Product08\n",
+      "Product08\n",
+      "Product02\n",
+      "Product01\n",
+      "Product08\n",
+      "Product03\n",
+      "Product09\n",
+      "Product01\n",
+      "Product04\n",
+      "Product08\n",
+      "Product02\n",
+      "Product09\n",
+      "Product08\n",
+      "Product05\n",
+      "Product07\n",
+      "Product10\n",
+      "Product02\n",
+      "Product08\n",
+      "Product06\n",
+      "Product04\n",
+      "Product03\n",
+      "Product09\n",
+      "Product04\n",
+      "Product04\n",
+      "Product10\n",
+      "Product06\n",
+      "Product07\n",
+      "Product05\n",
+      "Product09\n",
+      "Product10\n",
+      "Product03\n",
+      "Product09\n",
+      "Product06\n",
+      "Product10\n",
+      "Product08\n",
+      "Product06\n",
+      "Product10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in df.PRODUCT:\n",
+    "    if i in f[:10]:\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a759e937",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Product11', 'Product12', 'Product13', 'Product14', 'Product15',\n",
+       "       'Product16', 'Product17', 'Product18', 'Product19', 'Product20'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f[10:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e3a6dfc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Product21', 'Product22', 'Product23', 'Product24', 'Product25',\n",
+       "       'Product26', 'Product27', 'Product28', 'Product29', 'Product30'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f[20:30]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "cd1c76a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Product31', 'Product32', 'Product33', 'Product34', 'Product35',\n",
+       "       'Product36', 'Product37', 'Product38', 'Product39', 'Product40',\n",
+       "       'Product41', 'Product42', 'Product43', 'Product44'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f[30:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69e2d715",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "e39e98df",
    "metadata": {},
