--- a/web scrapping.ipynb
+++ b/web scrapping.ipynb
@@ -301,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rating=soup.find_all(\"div\", class_=\"stars _s\")\n"
+    "rating=soup.find_all(\"div\", class_=\"stars _s\")"
    ]
   },
   {
