--- a/work.ipynb
+++ b/work.ipynb
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1263fda",
+   "id": "539fd28a",
    "metadata": {},
    "source": [
     "# Data type in python\n",
@@ -1343,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "132cb048",
+   "id": "2300994d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1356,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "767d86be",
+   "id": "434872bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6244ed2d",
+   "id": "4289919e",
    "metadata": {},
    "source": [
     "# indexing and slicing\n",
@@ -1377,8 +1377,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "e9aae396",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var = \"python can be use to build cool things\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3474bb78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'p'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return p from the variable above\n",
+    "var[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3919b527",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bfe216ad",
+   "id": "11e489dc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1386,7 +1424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b359c147",
+   "id": "2b75300b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1394,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce373dc3",
+   "id": "0a1a2654",
    "metadata": {},
    "outputs": [],
    "source": []
