--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -5491,7 +5491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b15e33f7",
+   "id": "715ac32d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5499,7 +5499,828 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3319e8a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f0fe9c2",
+   "metadata": {},
+   "source": [
+    "# indexing and slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "04b7abc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# strings are sequence of characters\n",
+    "str1 = \"python is fun to learn\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "42ba19c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'p'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return p from the string above\n",
+    "str1[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "743f49ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'i'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1[7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ac19fe5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str2 =\"all datatype in python has zero base index\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "576456e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'p'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str2[16]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "927a401c",
+   "metadata": {},
+   "source": [
+    "# String method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "252a6653",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'     sojourn   '"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# strip(). it remove white space or any specified character before and after string \n",
+    "str2 = \"     sojourn   \"\n",
+    "str2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "95c6ee61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sojourn'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str2.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2f3c7939",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ALL GOOD ARE GOOD'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# upper(): it conver string from lowwer case to upper case\n",
+    "str1 = \"all good are good\"\n",
+    "str1.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3f310cf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'all well that ends well'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lower: convert string from upper to lower case\n",
+    "str1 = \"ALL WELL THAT ENDS WELL\"\n",
+    "str1.lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53e5071b",
+   "metadata": {},
+   "source": [
+    "# list Datatype\n",
+    "lists are container used to stored data of different datatype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52fe91e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lis1 = [] # an empty list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b3a14d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lis2 = [1,2,3,\"ten\", \"tewlve\", \"thirteen\", True] # list with element"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "effdd3c4",
+   "metadata": {},
+   "source": [
+    "# list indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "94a89fdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ten'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# display ten from the list below\n",
+    "lis2 = [1,2,3,\"ten\", \"tewlve\", \"thirteen\", True] # list with element\n",
+    "lis2[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "40c9b4ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# retur True from the list above\n",
+    "lis2[6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e855da1",
+   "metadata": {},
+   "source": [
+    "# List Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1b0a7b9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'i am learning python'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# join(): used to split element of string into text\n",
+    "list1 = [\"i\", \"am\", \"learning\", \"python\"]\n",
+    "\" \".join(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a466fa52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'learning'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pop: used to remove element from list\n",
+    "list1.pop(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6fd76cec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i', 'am', 'python']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "867e9321",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# append(): used to add element to a list\n",
+    "list1.append(\"and javat\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ef6c172a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i', 'am', 'python', 'and javat']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9ac37793",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dictionary: it has key and values pair relationship\n",
+    "\n",
+    "dict1 = {\"name\":\"olaitan\", \"age\":12, \"address\": \"olowoira\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b15e33f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'olaitan'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print olaitan from the dict1 above\n",
+    "dict1[\"name\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "88f84279",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dict1[\"age\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "96daec27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Pop(): is used to removed element of dictionary\n",
+    "dict1.pop(\"age\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "951ee22d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'olaitan', 'address': 'olowoira'}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c1377ecf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'olaitan', 'address': 'olowoira', 'salary': 38773}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# adding element to dictionary\n",
+    "dict1[\"salary\"]= 38773\n",
+    "dict1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4570dc0",
+   "metadata": {},
+   "source": [
+    "# control flow in python\n",
+    "1. conditional statement\n",
+    "    - if\n",
+    "    - else\n",
+    "    - elif\n",
+    "2. Loop statement\n",
+    "    - for\n",
+    "    - while\n",
+    "3. Loop control\n",
+    "    - break\n",
+    "    - continue\n",
+    " 4. error handling\n",
+    "     - try\n",
+    "     - except"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2de52fbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we may need to wait\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=5\n",
+    "if a < 2:\n",
+    "    print(\"we are good to go\")\n",
+    "else:\n",
+    "    print(\"we may need to wait\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e210094d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "today heat may be tough\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= 10\n",
+    "b = 88\n",
+    "if a> 10:\n",
+    "    print(\"rain is not falling\")\n",
+    "elif b ==  8:\n",
+    "    print(\"rain is falling\")\n",
+    "else:\n",
+    "    print(\"today heat may be tough\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "865c49df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n",
+      "l\n",
+      "a\n",
+      "i\n",
+      "t\n",
+      "a\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for loop\n",
+    "for i in \"olaitan\":\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5355913b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name_char = []\n",
+    "for i in \"olaitan\":\n",
+    "    name_char.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f21fa3c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['o', 'l', 'a', 'i', 't', 'a', 'n']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_char"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "42ff47fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['o', 'l', 'a', 'i']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_char = []\n",
+    "for char in \"olaitan\":\n",
+    "    name_char.append(char)\n",
+    "    if char==\"i\":\n",
+    "        break\n",
+    "name_char"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "656762c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['o', 'l', 'a', 't', 'a', 'n']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_char = []\n",
+    "for char in \"olaitan\":\n",
+    "     if char==\"i\":\n",
+    "        continue  # skip any i\n",
+    "     name_char.append(char)\n",
+    "   \n",
+    "name_char"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f2d1268",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33072978",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a849d8ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eac871ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fc58788",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45b9aa1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "445f42ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14c6e42d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe39bdeb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44140ece",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "195a46c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e881630",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c968e22a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de5c032d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abe4ab20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0d841a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f93ce48a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0011448c",
    "metadata": {},
    "outputs": [],
    "source": []
